# PO-lab-MSC-2024

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Doxyfile  ModelARX.cpp  ModelARX.h  ObiektSISO.cpp  ObiektSISO.h  ObiektStatyczny.hpp  PętlaUAR.cpp  PętlaUAR.hpp  RegulatorPID.cpp  RegulatorPID.h  define_fixes.hpp  feedback_loop.cpp  feedback_loop.hpp  fetch_tags.sh  generators.cpp  generators.hpp  gui.cpp  main.cpp  util.hpp
gui/: GeneratorsConfig.cpp  GeneratorsConfig.hpp  MainWindow.cpp  MainWindow.hpp  TreeModel.cpp  TreeModel.hpp  param_editors.cpp  param_editors.hpp
lab1/: ModelARX.cpp  ModelARX.h  ObiektSISO.cpp  ObiektSISO.h  ObiektSISO.hpp  dump_format.md  lab1.cpp  util.hpp
lab1/templated/: ModelARX.cpp  ModelARX.h  ObiektSISO.hpp  lab1.cpp
lab2/: CMakeLists.txt  RegulatorPID.cpp  RegulatorPID.h  define_fixes.hpp  feedback_loop.hpp  lab2.cpp
lab2/gui/: GeneratorsConfig.cpp  GeneratorsConfig.hpp  MainWindow.cpp  MainWindow.hpp
lab3/: generators.hpp  lab3.cpp  test_utils.hpp
lab3/data/: sawtooth.csv  sawtooth.ods  sin.csv  sin.ods
lab4/: ObiektStatyczny.hpp  PętlaUAR.cpp  PętlaUAR.hpp
tests/: import_export_test.cpp  lab1.cpp  lab2.cpp  test_utils.hpp
